Z-index bug fixed 4th attempt.

--- a/src/app/shared/layout/header/header.component.scss
+++ b/src/app/shared/layout/header/header.component.scss
@@ -4,7 +4,7 @@
 .header{
   padding: 1.875em 0;
   position: relative;
-  z-index: 5;
+  //z-index: 5;
   &__inner{
     display: flex;
     align-items: center;
